--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
 	<artifactId>mavenhelloworld</artifactId>
 	<version>1.0.0</version>
 
+	<properties>
+		<maven.compiler.release>14</maven.compiler.release>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -19,4 +23,32 @@
 		</dependency>
 
 	</dependencies>
+	
+	<build>
+        <finalName>mavenhelloworld</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.1</version>
+
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+
+            </plugin>
+        </plugins>
+    </build>
 </project>
